unpackaged/main/default/objects/Survey__c/fields/Ans1__c.field-meta.xml
<CustomField>
    <fullName>Ans1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ans1</label>
    <type>TextArea</type>
</CustomField>