unpackaged/main/default/objects/Survey__c/fields/Ans2__c.field-meta.xml
<CustomField>
    <fullName>Ans2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ans2</label>
    <type>TextArea</type>
</CustomField>