unpackaged/main/default/objects/Survey__c/fields/Ans3__c.field-meta.xml
<CustomField>
    <fullName>Ans3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ans3</label>
    <type>TextArea</type>
</CustomField>