unpackaged/main/default/objects/Survey__c/fields/EmiratesID_Number__c.field-meta.xml
<CustomField>
    <fullName>EmiratesID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EmiratesID Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>