unpackaged/main/default/objects/Survey__c/fields/Feedback_Rating__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Rating__c</fullName>
    <label>Feedback Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>