unpackaged/main/default/objects/Survey__c/fields/Ques2__c.field-meta.xml
<CustomField>
    <fullName>Ques2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ques2</label>
    <type>TextArea</type>
</CustomField>