unpackaged/main/default/objects/Survey__c/fields/Ques3__c.field-meta.xml
<CustomField>
    <fullName>Ques3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ques3</label>
    <type>TextArea</type>
</CustomField>